@@ -4,6 +4,7 @@
  - Update author name.
  - Update copyright years.
  - Update Module::Install::ReadmeFromPod to 0.26.
+ - Update Module::Install to 1.18 version.
 
 0.05 2015-09-22T16:16:33+02:00
  - Improve SEE ALSO section in doc.
